<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
    <RelativeLayout
        android:id="@+id/parent_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/quantity"
            style="@style/HeaderTextStyle"
            android:text="@string/qantity" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/quantity"
            android:id="@+id/linear_checkbox">
        <LinearLayout
            android:id="@+id/checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wheaped_cream"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_checkbox">

            <Button
                android:id="@+id/inc"

                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:onClick="increment"
                android:text="@string/inc" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/inc"
                android:gravity="center"
                android:text="@string/initial_value"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/dec"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/quantity_text_view"
                android:onClick="decrement"
                android:text="@string/dec" />
        </RelativeLayout>



        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative"
            android:layout_margin="16dp"
            android:onClick="submitOrder"
            android:text="@string/order_button" />
    </RelativeLayout>
</LinearLayout>
    </ScrollView>